--- a/Control-flow-and-defining-functions.ipynb
+++ b/Control-flow-and-defining-functions.ipynb
@@ -27,10 +27,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c371e04d-2ee7-486d-8c66-b1862fab4019",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 is positive\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if a number is positive\n",
     "number = 5  # Initialize the variable\n",
@@ -54,14 +62,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b7f70050-56eb-445a-a620-e4905e546596",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 is positive!\n"
+     ]
+    }
+   ],
    "source": [
-    "number = -3  # You can change this to test different numbers\n",
+    "number = 3  # You can change this to test different numbers\n",
     "\n",
-    "# Write an if block to check if the number is positive\n"
+    "# Write an if block to check if the number is positive\n",
+    "if number > 0:\n",
+    "    print(f\"{number} is positive!\")"
    ]
   },
   {
@@ -92,10 +110,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "8b8c4bcb-8304-476d-a99e-4e3c628f7ece",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-2 is negative\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if a number is positive or negative\n",
     "number = -2  # Initialize the variable\n",
@@ -121,14 +147,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "dd76de9c-6807-4c6d-8497-805e0f5bdb88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Now the number is negative: 1\n"
+     ]
+    }
+   ],
    "source": [
-    "number = 0  # Try different numbers, including negative numbers\n",
+    "number = -1  # Try different numbers, including negative numbers\n",
     "\n",
-    "# Write an if-else block to check if a number is negative; if it is, make the number positive\n"
+    "# Write an if-else block to check if a number is negative; if it is, make the number positive\n",
+    "if number >= 0:\n",
+    "    print(\"Already positive!\")\n",
+    "else:\n",
+    "    number *= -1\n",
+    "    print(f\"Now the number is negative: {number}\")"
    ]
   },
   {
@@ -159,10 +198,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "f91602ae-0f78-4f26-9c92-99ed0931dfa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 is zero\n"
+     ]
+    }
+   ],
    "source": [
     "# Check if a number is positive, negative, or zero\n",
     "number = 0  # Initialize the variable\n",
@@ -194,14 +241,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "9d354f72-3e97-4640-b265-73338d7da628",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
    "source": [
-    "number = 10  # Try different numbers, including negative and zero\n",
+    "number = 0.5  # Try different numbers, including negative and zero\n",
     "\n",
-    "# Write an if-elif-else block to classify the number as described above\n"
+    "# Write an if-elif-else block to classify the number as described above\n",
+    "if number > 1:\n",
+    "    print(number)\n",
+    "elif number <= 1 and number > 0:\n",
+    "    print(1 / number)\n",
+    "else:\n",
+    "    print(0)"
    ]
   },
   {
@@ -234,10 +295,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "77ea255b-5e33-4575-942a-c1f5173606b5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Print numbers from 1 to 5 using a while loop\n",
     "i = 1  # Initialize the loop variable\n",
@@ -262,15 +335,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "26ff297a-bb57-43ee-8cc2-b2381e1c0073",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the loop variable\n",
     "i = 1  # Start at 1\n",
     "\n",
-    "# Write a while loop to print only even numbers between 1 and 10\n"
+    "# Write a while loop to print only even numbers between 1 and 10\n",
+    "while i <= 10:\n",
+    "    if i % 2 == 0:\n",
+    "        print(i)\n",
+    "    i += 1"
    ]
   },
   {
@@ -296,10 +385,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "873b4670-2d88-45e7-97da-067ac53c3737",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Iterate over a list of numbers\n",
     "numbers = [1, 2, 3, 4, 5]  # Initialize a list of numbers\n",
@@ -324,15 +425,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "8338c319-7bdc-4993-a5dd-56658ec33339",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the list of numbers\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]   \n",
     "\n",
-    "# Write a for loop to calculate the sum of the list\n"
+    "# Write a for loop to calculate the sum of the list\n",
+    "acc = 0\n",
+    "for n in numbers:\n",
+    "    acc += n\n",
+    "print(acc)"
    ]
   },
   {
@@ -352,10 +465,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2b0a277e-a7d6-4621-86df-410cadd4638d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "# Use break to exit the loop early\n",
     "numbers = [1, 2, 3, 4, 5]\n",
@@ -377,10 +499,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "78df4883-ee40-446e-acb5-c1cf2df7be39",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
    "source": [
     "# Use continue to skip number 3\n",
     "numbers = [1, 2, 3, 4, 5]\n",
@@ -405,15 +538,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "c5c8bdff-3feb-4589-a8c3-7f5109412b5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "5\n",
+      "7\n",
+      "8\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize the list of numbers\n",
     "numbers = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "\n",
-    "# Write a for loop with continue to skip numbers divisible by 3"
+    "# Write a for loop with continue to skip numbers divisible by 3\n",
+    "for n in numbers:\n",
+    "    if n % 3 == 0:\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(n)"
    ]
   },
   {
@@ -441,10 +592,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "8e673904-8c86-4eed-a98c-cd3a2892be59",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: Division by zero is not allowed.\n"
+     ]
+    }
+   ],
    "source": [
     "a = 0 # try some numbers, including 0\n",
     "\n",
@@ -480,10 +639,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6f60fece-1404-4410-8ce5-99f0833c63e3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum: 8\n"
+     ]
+    }
+   ],
    "source": [
     "# Define a function to add two numbers\n",
     "def add_numbers(a, b):\n",
@@ -496,10 +663,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "2d1a79fd-56c4-4df8-bf3b-aba0e64b3c9b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.9"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# call the defined function later on\n",
     "add_numbers(1.2, 3.7)"
@@ -519,16 +697,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "13c1931e-b0af-44de-9bbb-cfd3750e52b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7, 9]\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize two lists (vectors). Try some of your own.\n",
     "vector1 = [1, 2, 3]\n",
     "vector2 = [4, 5, 6]\n",
     "\n",
-    "# Write a function that takes two lists (vectors) and returns their element-wise sum, returning a vector\n"
+    "# Write a function that takes two lists (vectors) and returns their element-wise sum, returning a vector\n",
+    "def add_vector(a, b):\n",
+    "    if len(a) != len(b):\n",
+    "        raise Exception(\"Vectors must be the same length\")\n",
+    "    else:\n",
+    "        ret = []\n",
+    "        for x, y in zip(a, b):\n",
+    "            ret.append(x + y)\n",
+    "        return ret\n",
+    "\n",
+    "print(add_vector(vector1, vector2))"
    ]
   },
   {
@@ -545,16 +741,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "a545637b-193d-43e9-89c5-74bc6c7cc149",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
    "source": [
     "# Initialize two lists (vectors). Try some of your own.\n",
     "vector1 = [1, 2, 3]\n",
     "vector2 = [4, 5, 6]\n",
     "\n",
-    "# Write a function that takes two lists (vectors) and returns their dot-product, returning a scalar\n"
+    "# Write a function that takes two lists (vectors) and returns their dot-product, returning a scalar\n",
+    "def dot(a, b):\n",
+    "    if len(a) != len(b):\n",
+    "        raise Exception(\"Vectors must be the same length\")\n",
+    "    else:\n",
+    "        acc = 0\n",
+    "        for x, y in zip(a, b):\n",
+    "            acc += x * y\n",
+    "        return acc\n",
+    "\n",
+    "print(dot(vector1, vector2))"
    ]
   }
  ],
@@ -574,7 +788,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
