--- a/symmetry.ipynb
+++ b/symmetry.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Symmetry Operations and "
+    "# Symmetry Operations on Physical Quantities"
    ]
   }
  ],
